fixed song artwork height stretching

--- a/src/components/Song/styles.scss
+++ b/src/components/Song/styles.scss
@@ -10,6 +10,7 @@
   .art {
     grid-area: art;
     width: 40px;
+    height: 40px;
   }
 
   .artist {
